--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="info-box">
     <h3>User Data Sent to Bot</h3>
     <p><strong>Email4:</strong> <span id="user-email">test.user@example.com</span></p>
-    <p><strong>Page:</strong> <span id="page-name">Homepage</span></p>
+    <p><strong>Page1:</strong> <span id="page-name">Homepage</span></p>
     <p><strong>Category:</strong> <span id="category">general</span></p>
   </div>
 
@@ -78,17 +78,24 @@
 
 
 
-
 window.botpress.on('webchat:initialized', () => {
-document.getElementById('triggerBotAction1').addEventListener('click',async()=>{
-const customerPayload={
-  type: "trigger",
-      name: "action1",
-      payload: {}
-};
-window.botpress.sendEvent(customerPayload);
-});
+  console.log('Webchat initialized');
+
+  // 绑定按钮
+  const btn = document.getElementById('triggerBotAction1');
+  btn.addEventListener('click', async () => {
+    if (window.botpress && window.botpress.sendEvent) {
+      await window.botpress.sendEvent({
+        type: "trigger",   // 必须
+        name: "action1",   // Studio Trigger 名称，大小写敏感
+        payload: { page_name: "RetailPro" } // 可选
+      });
+      console.log('Trigger button sent ✅');
+    } else {
+      console.error('Botpress not ready yet!');
+    }
   });
+});
 
 
     
