--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class="info-box">
     <h3>User Data Sent to Bot</h3>
     <p><strong>Email:</strong> <span id="user-email">test.user@example.com</span></p>
-    <p><strong>Page1:</strong> <span id="page-name">Homepage</span></p>
+    <p><strong>Page:</strong> <span id="page-name">Homepage</span></p>
     <p><strong>Category:</strong> <span id="category">general</span></p>
   </div>
 
@@ -88,7 +88,7 @@ window.botpress.on('webchat:initialized', () => {
       await window.botpress.sendEvent({
         type: "trigger",   // 必须
         name: "action1",   // Studio Trigger 名称，大小写敏感
-        payload: { page_name: "RetailPro" } // 可选
+        payload: { page_name: "RetailPro1" } // 可选
       });
       console.log('Trigger button sent ✅');
     } else {
@@ -105,7 +105,7 @@ function clearChat() {
     window.botpress.sendEvent({
       type: "trigger",    // 必须是 trigger 类型
       name: "action2",    // 你在 Botpress Studio 里定义的 trigger 名称
-      payload: {}         // 可选
+      payload: {page_name: "RetailPro2"}         // 可选
     });
     console.log('Trigger sent ✅');
   } else {
