--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
   <div class="info-box">
     <h3>User Data Sent to Bot</h3>
-    <p><strong>Email:</strong> <span id="user-email">test.user@example.com</span></p>
+    <p><strong>Email2:</strong> <span id="user-email">test.user@example.com</span></p>
     <p><strong>Page:</strong> <span id="page-name">Homepage</span></p>
     <p><strong>Category:</strong> <span id="category">general</span></p>
   </div>
 
   <button onclick="clearChat()">clean bot1</button>
-  <button id="triggerBotAction1">Button1</button>
+  <button onclick="clearChat2()">clean bot2</button>
   
   <!-- Botpress Webchat -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js"></script>
@@ -78,29 +78,22 @@
 
 
 
-window.botpress.on('webchat:initialized', () => {
-  console.log('Webchat initialized');
-
-  // 绑定按钮
-  const btn = document.getElementById('triggerBotAction1');
-  btn.addEventListener('click', async () => {
-    if (window.botpress && window.botpress.sendEvent) {
-      await window.botpress.sendEvent({
-        type: "trigger",   // 必须
-        name: "action1",   // Studio Trigger 名称，大小写敏感
-        payload: { page_name: "RetailPro1" } // 可选
-      });
-      console.log('Trigger button sent ✅');
-    } else {
-      console.error('Botpress not ready yet!');
-    }
-  });
-});
-
 
     
 
 function clearChat() {
+  if (window.botpress && window.botpress.sendEvent) {
+    window.botpress.sendEvent({
+      type: "trigger",    // 必须是 trigger 类型
+      name: "action1",    // 你在 Botpress Studio 里定义的 trigger 名称
+      payload: {page_name: "RetailPro1"}         // 可选
+    });
+    console.log('Trigger sent ✅');
+  } else {
+    console.error('Botpress not ready yet!');
+  }
+}
+function clearChat2() {
   if (window.botpress && window.botpress.sendEvent) {
     window.botpress.sendEvent({
       type: "trigger",    // 必须是 trigger 类型
