--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div class="info-box">
     <h3>User Data Sent to Bot</h3>
-    <p><strong>Email2:</strong> <span id="user-email">test.user@example.com</span></p>
+    <p><strong>Email:</strong> <span id="user-email">test.user@example.com</span></p>
     <p><strong>Page:</strong> <span id="page-name">Homepage</span></p>
     <p><strong>Category:</strong> <span id="category">general</span></p>
   </div>
@@ -100,7 +100,7 @@ function clearChat2() {
       name: "action2",    // 你在 Botpress Studio 里定义的 trigger 名称
       payload: {page_name: "RetailPro2"}         // 可选
     });
-    console.log('Trigger sent ✅');
+    console.log('Trigger sent2 ✅');
   } else {
     console.error('Botpress not ready yet!');
   }
